--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body {
     background: rgb(170, 170, 170);
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .heading {
     font-size: 90px;
     color: darkslategray;
+    margin-bottom: 100px;
 }
 
+
 #passwordLength {
+    text-align: center;
     background-color: aliceblue;
     margin-top: 10%;
     margin-bottom: 40px;
+    margin-right: 100px;
     font-size: 40px;
     border-radius: 10px;
     border-color: darkslategray;
@@ -24,14 +35,34 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-.btn {
+#copy {
+    color: #7f0909;
+}
+
+.btn,
+.btn-copy {
     font-size: 50px;
     border-radius: 15px;
     color: darkslategray;
     background-color: aliceblue;
     margin-left: 50px;
     margin-right: 50px;
+    padding: 10px;
     cursor: pointer;
+}
+
+.btn:active {
+    background-color: cadetblue;
+}
+
+.btn-copy:active {
+    background-color: yellow;
+}
+
+.btn:hover {
+    font-size: 80px;
+    transition: all 200ms;
+    font-size-adjust: 20px;
 }
 
 .password {
